# wl

./: README.md
.claude/: CLAUDE.md
.specify/memory/: constitution.md
client/: Cargo.toml
client/src/: cli.rs  daemon.rs  ipc.rs  main.rs  random.rs  upscale.rs
common/: Cargo.toml
common/src/: cache.rs  image_decode.rs  ipc_types.rs  lib.rs
daemon/: Cargo.toml  build.rs
daemon/src/: animation.rs  ipc.rs  main.rs  output.rs  render.rs  rotation.rs  state.rs  transition.rs  wayland.rs
daemon/src/vulkan/: mod.rs  pipeline.rs  shaders.rs  swapchain.rs  texture.rs
shaders/: transition_ascii_dissolve.frag  transition_burn.frag  transition_chromatic_aberration.frag  transition_crt_shutdown.frag  transition_disintegrate.frag  transition_fade.frag  transition_fluid_distortion.frag  transition_fluid_drain.frag  transition_fluid_ripple.frag  transition_fluid_vortex.frag  transition_fluid_wave.frag  transition_glitch.frag  transition_grow.frag  transition_hexagonalize.frag  transition_ink_bleed.frag  transition_lava_lamp.frag  transition_lens_distortion.frag  transition_outer.frag  transition_perlin_wipe.frag  transition_pixelate.frag  transition_radial_blur.frag  transition_wave.frag  transition_wipe.frag  wallpaper.frag
specs/3-transition-shaders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-transition-shaders/checklists/: requirements.md
specs/3-transition-shaders/contracts/: cli-transition-types.md
specs/7-random-wallpaper/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/7-random-wallpaper/contracts/: cli-random.md
tests/visual/: compare.py  generate_tests.py  run.sh
