[package]
name = "swww-vulkan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swww-vulkan"
path = "src/main.rs"

[dependencies]
swww-vulkan-common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["fs", "socket", "mman"] }
bincode = "1"
image = { version = "0.25", default-features = false }
walkdir = "2"
getrandom = "0.2"
