[package]
name = "wl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
wl-common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["fs", "socket", "mman"] }
bincode = "1"
walkdir = "2"
getrandom = "0.2"
